$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------

- fix IPv6 link-local address configuration error in MPD when IPV6CP comes up after IPCP
  (error message "IFACE: Adding IPv6 address to ngwan0 failed: File exists" in log)

- fix bogus IPv6 DNS server addresses when using PPPoE/PPTP on WAN

- change order of reset methods in vm_machdep.c to fix reboot on Nokia IP130 hardware

- enable additional hash algorithms (SHA-256/384/512) and DH groups in
  IPsec configuration

- switch back to setkey binary that comes with ipsec-tools, as the stock
  FreeBSD version still needs to be patched to cope with NAT-T (and the
  patching causes libipsec troubles during the build process)

- hack support for reading ISC leasefile back into Dnsmasq (to make
  "Register DHCP leases in DNS forwarder" feature work again); better option would
  be to switch to Dnsmasq for the DHCP server feature as well, but that is considered
  too intrusive at this stage

- enable CPU hardware crypto support by loading appropriate modules

- fix IPv6 RA enable/disable JavaScript

- fix aborted build when ntpd is running

- fix reconnect behaviour of the scheduler to consider that interfaces could be already down
  add job enable/disable wlan to the scheduler
  add possibility to undo certain jobs of the scheduler that have already been executed

- add scheduler ("Croen") service, contributed by Lennart Grahl
  current possible actions: reboot, reconnect WAN interface

- automatically reassign available physical network interfaces if none
  of the assigned interfaces in the configuration can be found on the system
  (i.e. for a new installation, or when moving an existing config to new
  hardware)

- use UFS1 instead of UFS2 for image (UFS2 does not give an advantage here
  and may give problems when upgrading directly from old versions)
