@@ -94,7 +94,7 @@ diff -urN dnsmasq-2.59.orig/src/dnsmasq.h dnsmasq-2.59/src/dnsmasq.h
 diff -urN dnsmasq-2.59.orig/src/isc.c dnsmasq-2.59/src/isc.c
 --- src/isc.c	1970-01-01 01:00:00.000000000 +0100
 +++ src/isc.c	2012-02-11 18:00:34.000000000 +0100
-@@ -0,0 +1,252 @@
+@@ -0,0 +1,250 @@
 +/* dnsmasq is Copyright (c) 2000-2007 Simon Kelley
 +
 +   This program is free software; you can redistribute it and/or modify
@@ -190,8 +190,6 @@ diff -urN dnsmasq-2.59.orig/src/isc.c dnsmasq-2.59/src/isc.c
 +      my_syslog (LOG_ERR, _("failed to load %s: %s"), daemon->lease_file, strerror(errno));
 +      return;
 +    }
-+  
-+  my_syslog (LOG_INFO, _("reading %s"), daemon->lease_file);
 +
 +  while ((next_token(token, MAXTOK, fp)))
 +    {
